--- a/Lecture 9/Regression.ipynb
+++ b/Lecture 9/Regression.ipynb
@@ -10,14 +10,17 @@
     "\n",
     "---\n",
     "\n",
-    "**Numpy** or **Numerical Python** is the fundamental package for numeric computing with Python. It provides powerful ways to create,\n",
-    "store, and/or manipulate data, which makes it able to seamlessly and speedily integrate with a wide variety\n",
-    "of databases. Numpy is the foundation of several libraries such as `Pandas`, `SciPy`, `SymPy`\n",
+    "Regression is a statistical method used in different disciplines that attempts to determine the strength and character of the relationship between one dependent variable (usually denoted by Y) and a series of other variables (known as independent variables). Regression analysis helps us to determine the line that most closely fits our data. In linear regression, we strive to find best linear line and our model is linear in **parameters** as well, hence the name.\n",
     "\n",
     "\n",
-    "In this lecture, we will talk about creating array with certain data types, manipulating array, selecting\n",
-    "elements from arrays, as well as universal functions of NumPy and how to use its statistical and mathematical capabilities. Moreover, we see how to load dataset into array. Such functions are useful for manipulating data and\n",
-    "understanding the functionalities of other common Python data packages.\n",
+    "$$\n",
+    "$$\n",
+    "\n",
+    "![alt text](images/reg.png \"Title\")\n",
+    "\n",
+    "\n",
+    "$$\n",
+    "$$\n",
     "\n",
     "\n",
     "### Lecture outline\n",
@@ -1881,7 +1884,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.7.7 64-bit ('learning': conda)",
+   "display_name": "('learning': conda)",
    "language": "python",
    "name": "python37764bitlearningcondadead39b8b5cb441aa05edba06d4d913f"
   },
