--- a/Lecture 9/Regression.ipynb
+++ b/Lecture 9/Regression.ipynb
@@ -10,7 +10,7 @@
     "\n",
     "---\n",
     "\n",
-    "Regression is a statistical method used in different disciplines that attempts to determine the strength and character of the relationship between one dependent variable (usually denoted by Y) and a series of other variables (known as independent variables). Regression analysis helps us to determine the line that most closely fits our data. In linear regression, we strive to find best linear line and our model is linear in **parameters** as well, hence the name.\n",
+    "Regression is a statistical method used in different disciplines that attempts to determine the strength and character of the relationship between one dependent variable (usually denoted by Y) and a series of other variables (known as independent variables). Regression analysis helps us to determine the line that most closely fits our data. In linear regression, we strive to find best linear line and our model is linear in **parameters** as well, hence the name. The target variable is continuous, meaning that it can take any value on a real line. Such as temperature outside, price of oil, or communal charges.\n",
     "\n",
     "\n",
     "$$\n",
