--- a/Lecture 10/Classification.ipynb
+++ b/Lecture 10/Classification.ipynb
@@ -4,6 +4,93 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "# Classification\n",
+    "\n",
+    "---\n",
+    "\n",
+    "Actually, classification is a regression but in narrow (discrete) interval. In classification, we try to classify objects, events, or even people into some category based on their similarities or some common criteria. In regression task we try to find best fitting line to our data, whereas in classification task we also try to find a line which gives us the best separation or discrimination between categories or groups. Compared to regression, in classification the target is not a continuous variable, rather then discrete, taking finite number of values. Such as survived or not survived, defaulted or not defaulted, spam or not spam, and so on. There are three types of classification in a wild:\n",
+    "\n",
+    "\n",
+    "* **Binary Classification**\n",
+    "\n",
+    "\n",
+    "* **Multi-Class Classification**\n",
+    "\n",
+    "\n",
+    "* **Multi-Label Classification**\n",
+    "\n",
+    "\n",
+    "In this class, we only focus on binary classification. However, you will have solid foundation to dig deeper down in the rabbit whole.\n",
+    "\n",
+    "\n",
+    "$$\n",
+    "$$\n",
+    "\n",
+    "\n",
+    "![alt text](images/classification.png \"Title\")\n",
+    "\n",
+    "\n",
+    "$$\n",
+    "$$\n",
+    "\n",
+    "\n",
+    "\n",
+    "### Lecture outline\n",
+    "\n",
+    "---\n",
+    "\n",
+    "* Problem Statement\n",
+    "\n",
+    "\n",
+    "* Data Description\n",
+    "\n",
+    "\n",
+    "* EDA - Exploratory Data Analysis\n",
+    "\n",
+    "\n",
+    "* Data Processing\n",
+    "\n",
+    "\n",
+    "* Logistic Regression\n",
+    "\n",
+    "\n",
+    "* Decision Tree Classification\n",
+    "\n",
+    "\n",
+    "* Random Forest Classification\n",
+    "\n",
+    "\n",
+    "* Model Performance Assessment"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# For data processing\n",
+    "import pandas as pd\n",
+    "import numpy as np\n",
+    "\n",
+    "# For data viz\n",
+    "import matplotlib.pyplot as plt\n",
+    "import seaborn as sns\n",
+    "\n",
+    "# For modeling\n",
+    "from sklearn.linear_model import LogisticRegression\n",
+    "from sklearn.tree import DecisionTreeClassifier\n",
+    "from sklearn.ensemble import RandomForestClassifier\n",
+    "from sklearn.model_selection import train_test_split\n",
+    "\n",
+    "# For model performance assessment\n",
+    "from sklearn import metrics"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "[best kaggle notebook - titanic](https://www.kaggle.com/ash316/eda-to-prediction-dietanic)\n",
     "\n",
     "\n",
@@ -27,11 +114,12 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "#### Reference\n",
+    "\n"
+   ]
   },
   {
    "cell_type": "code",
@@ -71,7 +159,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.7.7 64-bit ('learning': conda)",
+   "display_name": "('learning': conda)",
    "language": "python",
    "name": "python37764bitlearningcondadead39b8b5cb441aa05edba06d4d913f"
   },
