--- a/Lecture 9/Regression.ipynb
+++ b/Lecture 9/Regression.ipynb
@@ -2,9 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "metadata": {
-    "heading_collapsed": true
-   },
+   "metadata": {},
    "source": [
     "# Regression\n",
     "\n",
@@ -53,9 +51,7 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "source": [
     "#### Reference\n",
     "\n",
@@ -66,7 +62,7 @@
     "[Ordinary Least Squares](https://www.statsmodels.org/stable/examples/notebooks/generated/ols.html)\n",
     "\n",
     "\n",
-    "[sklearn - LinearRegression](https://scikit-learn.org/stable/modules/generated/sklearn.linear_model.LinearRegression.html)\n",
+    "[sklearn - Linear Regression](https://scikit-learn.org/stable/modules/generated/sklearn.linear_model.LinearRegression.html)\n",
     "\n",
     "[sklearn - Decision Tree Regressor](https://scikit-learn.org/stable/modules/generated/sklearn.tree.DecisionTreeRegressor.html)\n",
     "\n",
@@ -81,8 +77,7 @@
     "ExecuteTime": {
      "end_time": "2021-01-18T19:12:01.780315Z",
      "start_time": "2021-01-18T19:12:01.765706Z"
-    },
-    "hidden": true
+    }
    },
    "outputs": [],
    "source": [
@@ -112,8 +107,7 @@
     "ExecuteTime": {
      "end_time": "2021-01-18T15:33:56.512558Z",
      "start_time": "2021-01-18T15:33:56.510417Z"
-    },
-    "hidden": true
+    }
    },
    "outputs": [],
    "source": [
@@ -122,10 +116,7 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "heading_collapsed": true,
-    "hidden": true
-   },
+   "metadata": {},
    "source": [
     "## Problem Statement\n",
     "\n",
@@ -134,15 +125,12 @@
     "To make their profit, insurance companies should collect higher premium than the amount paid to the insured person. Due to this, insurance companies invests a lot of time, effort, and money in creating models that accurately predicts health care costs and then correspondingly charge the insured person.\n",
     "\n",
     "\n",
-    "Today, we build one of the simplest model to make a prediction. However, this simples model will give the best way to interpret the modeling results, compared to other \"black-box\" machine learning model results."
+    "Today, we build one of the simplest model to make a prediction. However, this simplest model will give the best way to interpret the modeling results, compared to other \"black-box\" machine learning model results."
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "heading_collapsed": true,
-    "hidden": true
-   },
+   "metadata": {},
    "source": [
     "## Data Description\n",
     "\n",
@@ -179,8 +167,7 @@
     "ExecuteTime": {
      "end_time": "2021-01-18T15:34:00.733673Z",
      "start_time": "2021-01-18T15:34:00.711722Z"
-    },
-    "hidden": true
+    }
    },
    "outputs": [],
    "source": [
@@ -194,8 +181,7 @@
     "ExecuteTime": {
      "end_time": "2021-01-18T15:34:01.004087Z",
      "start_time": "2021-01-18T15:34:00.985575Z"
-    },
-    "hidden": true
+    }
    },
    "outputs": [],
    "source": [
@@ -204,10 +190,7 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "heading_collapsed": true,
-    "hidden": true
-   },
+   "metadata": {},
    "source": [
     "## EDA - Exploratory Data Analysis\n",
     "\n",
@@ -223,8 +206,7 @@
     "ExecuteTime": {
      "end_time": "2021-01-18T15:34:01.894771Z",
      "start_time": "2021-01-18T15:34:01.875897Z"
-    },
-    "hidden": true
+    }
    },
    "outputs": [],
    "source": [
@@ -238,8 +220,7 @@
     "ExecuteTime": {
      "end_time": "2021-01-18T15:34:02.307386Z",
      "start_time": "2021-01-18T15:34:02.298775Z"
-    },
-    "hidden": true
+    }
    },
    "outputs": [],
    "source": [
@@ -253,8 +234,7 @@
     "ExecuteTime": {
      "end_time": "2021-01-18T15:34:02.794596Z",
      "start_time": "2021-01-18T15:34:02.784047Z"
-    },
-    "hidden": true
+    }
    },
    "outputs": [],
    "source": [
@@ -268,8 +248,7 @@
     "ExecuteTime": {
      "end_time": "2021-01-18T15:34:03.174308Z",
      "start_time": "2021-01-18T15:34:03.165326Z"
-    },
-    "hidden": true
+    }
    },
    "outputs": [],
    "source": [
@@ -278,10 +257,7 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "heading_collapsed": true,
-    "hidden": true
-   },
+   "metadata": {},
    "source": [
     "### Checking Missing Values\n",
     "\n",
@@ -297,8 +273,7 @@
     "ExecuteTime": {
      "end_time": "2021-01-18T15:34:03.948543Z",
      "start_time": "2021-01-18T15:34:03.943706Z"
-    },
-    "hidden": true
+    }
    },
    "outputs": [],
    "source": [
@@ -308,8 +283,7 @@
   {
    "cell_type": "markdown",
    "metadata": {
-    "heading_collapsed": true,
-    "hidden": true
+    "heading_collapsed": true
    },
    "source": [
     "### Univariate Analysis\n",
@@ -644,8 +618,7 @@
   {
    "cell_type": "markdown",
    "metadata": {
-    "heading_collapsed": true,
-    "hidden": true
+    "heading_collapsed": true
    },
    "source": [
     "### Bivariate Analysis\n",
@@ -947,8 +920,7 @@
   {
    "cell_type": "markdown",
    "metadata": {
-    "heading_collapsed": true,
-    "hidden": true
+    "heading_collapsed": true
    },
    "source": [
     "### Visualizing regression models\n",
@@ -1004,8 +976,7 @@
   {
    "cell_type": "markdown",
    "metadata": {
-    "heading_collapsed": true,
-    "hidden": true
+    "heading_collapsed": true
    },
    "source": [
     "## Data Processing\n",
@@ -1234,10 +1205,7 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "heading_collapsed": true,
-    "hidden": true
-   },
+   "metadata": {},
    "source": [
     "## Linear Regression\n",
     "\n",
@@ -1254,8 +1222,7 @@
   {
    "cell_type": "markdown",
    "metadata": {
-    "heading_collapsed": true,
-    "hidden": true
+    "heading_collapsed": true
    },
    "source": [
     "### Sklearn"
@@ -1341,8 +1308,7 @@
   {
    "cell_type": "markdown",
    "metadata": {
-    "heading_collapsed": true,
-    "hidden": true
+    "heading_collapsed": true
    },
    "source": [
     "### Statsmodels"
@@ -1411,8 +1377,7 @@
   {
    "cell_type": "markdown",
    "metadata": {
-    "heading_collapsed": true,
-    "hidden": true
+    "heading_collapsed": true
    },
    "source": [
     "### Interpretation of the results\n",
@@ -1430,8 +1395,7 @@
   {
    "cell_type": "markdown",
    "metadata": {
-    "heading_collapsed": true,
-    "hidden": true
+    "heading_collapsed": true
    },
    "source": [
     "## Decision Tree Regression\n",
@@ -1570,8 +1534,7 @@
   {
    "cell_type": "markdown",
    "metadata": {
-    "heading_collapsed": true,
-    "hidden": true
+    "heading_collapsed": true
    },
    "source": [
     "## Random Forest Regression\n",
@@ -1694,8 +1657,7 @@
   {
    "cell_type": "markdown",
    "metadata": {
-    "heading_collapsed": true,
-    "hidden": true
+    "heading_collapsed": true
    },
    "source": [
     "## Model Performance Assessment\n",
