--- a/Lecture 9/Regression.ipynb
+++ b/Lecture 9/Regression.ipynb
@@ -2,7 +2,9 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "heading_collapsed": true
+   },
    "source": [
     "# Regression\n",
     "\n",
@@ -51,7 +53,9 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "source": [
     "#### Reference\n",
     "\n",
@@ -77,7 +81,8 @@
     "ExecuteTime": {
      "end_time": "2021-01-18T19:12:01.780315Z",
      "start_time": "2021-01-18T19:12:01.765706Z"
-    }
+    },
+    "hidden": true
    },
    "outputs": [],
    "source": [
@@ -107,7 +112,8 @@
     "ExecuteTime": {
      "end_time": "2021-01-18T15:33:56.512558Z",
      "start_time": "2021-01-18T15:33:56.510417Z"
-    }
+    },
+    "hidden": true
    },
    "outputs": [],
    "source": [
@@ -116,7 +122,10 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "heading_collapsed": true,
+    "hidden": true
+   },
    "source": [
     "## Problem Statement\n",
     "\n",
@@ -130,7 +139,10 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "heading_collapsed": true,
+    "hidden": true
+   },
    "source": [
     "## Data Description\n",
     "\n",
@@ -167,7 +179,8 @@
     "ExecuteTime": {
      "end_time": "2021-01-18T15:34:00.733673Z",
      "start_time": "2021-01-18T15:34:00.711722Z"
-    }
+    },
+    "hidden": true
    },
    "outputs": [],
    "source": [
@@ -181,7 +194,8 @@
     "ExecuteTime": {
      "end_time": "2021-01-18T15:34:01.004087Z",
      "start_time": "2021-01-18T15:34:00.985575Z"
-    }
+    },
+    "hidden": true
    },
    "outputs": [],
    "source": [
@@ -190,7 +204,10 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "heading_collapsed": true,
+    "hidden": true
+   },
    "source": [
     "## EDA - Exploratory Data Analysis\n",
     "\n",
@@ -206,7 +223,8 @@
     "ExecuteTime": {
      "end_time": "2021-01-18T15:34:01.894771Z",
      "start_time": "2021-01-18T15:34:01.875897Z"
-    }
+    },
+    "hidden": true
    },
    "outputs": [],
    "source": [
@@ -220,7 +238,8 @@
     "ExecuteTime": {
      "end_time": "2021-01-18T15:34:02.307386Z",
      "start_time": "2021-01-18T15:34:02.298775Z"
-    }
+    },
+    "hidden": true
    },
    "outputs": [],
    "source": [
@@ -234,7 +253,8 @@
     "ExecuteTime": {
      "end_time": "2021-01-18T15:34:02.794596Z",
      "start_time": "2021-01-18T15:34:02.784047Z"
-    }
+    },
+    "hidden": true
    },
    "outputs": [],
    "source": [
@@ -248,7 +268,8 @@
     "ExecuteTime": {
      "end_time": "2021-01-18T15:34:03.174308Z",
      "start_time": "2021-01-18T15:34:03.165326Z"
-    }
+    },
+    "hidden": true
    },
    "outputs": [],
    "source": [
@@ -257,7 +278,10 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "heading_collapsed": true,
+    "hidden": true
+   },
    "source": [
     "### Checking Missing Values\n",
     "\n",
@@ -273,7 +297,8 @@
     "ExecuteTime": {
      "end_time": "2021-01-18T15:34:03.948543Z",
      "start_time": "2021-01-18T15:34:03.943706Z"
-    }
+    },
+    "hidden": true
    },
    "outputs": [],
    "source": [
@@ -283,7 +308,8 @@
   {
    "cell_type": "markdown",
    "metadata": {
-    "heading_collapsed": true
+    "heading_collapsed": true,
+    "hidden": true
    },
    "source": [
     "### Univariate Analysis\n",
@@ -618,7 +644,8 @@
   {
    "cell_type": "markdown",
    "metadata": {
-    "heading_collapsed": true
+    "heading_collapsed": true,
+    "hidden": true
    },
    "source": [
     "### Bivariate Analysis\n",
@@ -920,7 +947,8 @@
   {
    "cell_type": "markdown",
    "metadata": {
-    "heading_collapsed": true
+    "heading_collapsed": true,
+    "hidden": true
    },
    "source": [
     "### Visualizing regression models\n",
@@ -976,7 +1004,8 @@
   {
    "cell_type": "markdown",
    "metadata": {
-    "heading_collapsed": true
+    "heading_collapsed": true,
+    "hidden": true
    },
    "source": [
     "## Data Processing\n",
@@ -1205,7 +1234,10 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "heading_collapsed": true,
+    "hidden": true
+   },
    "source": [
     "## Linear Regression\n",
     "\n",
@@ -1222,7 +1254,8 @@
   {
    "cell_type": "markdown",
    "metadata": {
-    "heading_collapsed": true
+    "heading_collapsed": true,
+    "hidden": true
    },
    "source": [
     "### Sklearn"
@@ -1308,7 +1341,8 @@
   {
    "cell_type": "markdown",
    "metadata": {
-    "heading_collapsed": true
+    "heading_collapsed": true,
+    "hidden": true
    },
    "source": [
     "### Statsmodels"
@@ -1377,7 +1411,8 @@
   {
    "cell_type": "markdown",
    "metadata": {
-    "heading_collapsed": true
+    "heading_collapsed": true,
+    "hidden": true
    },
    "source": [
     "### Interpretation of the results\n",
@@ -1395,7 +1430,8 @@
   {
    "cell_type": "markdown",
    "metadata": {
-    "heading_collapsed": true
+    "heading_collapsed": true,
+    "hidden": true
    },
    "source": [
     "## Decision Tree Regression\n",
@@ -1534,7 +1570,8 @@
   {
    "cell_type": "markdown",
    "metadata": {
-    "heading_collapsed": true
+    "heading_collapsed": true,
+    "hidden": true
    },
    "source": [
     "## Random Forest Regression\n",
@@ -1657,7 +1694,7 @@
   {
    "cell_type": "markdown",
    "metadata": {
-    "heading_collapsed": true
+    "hidden": true
    },
    "source": [
     "## Model Performance Assessment\n",
