--- a/Lecture 1/Basics.ipynb
+++ b/Lecture 1/Basics.ipynb
@@ -2,9 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "metadata": {
-    "heading_collapsed": true
-   },
+   "metadata": {},
    "source": [
     "# Basics\n",
     "\n",
@@ -37,27 +35,24 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "source": [
     "#### Reference\n",
     "\n",
     "\n",
-    "[IO tools (text, CSV, HDF5, …)](https://pandas.pydata.org/pandas-docs/stable/user_guide/io.html#sql-queries)\n",
+    "[IO tools (text, CSV, HDF5, …)](https://pandas.pydata.org/pandas-docs/stable/user_guide/io.html#io-tools-text-csv-hdf5)\n",
     "\n",
     "[Pandas: How to Read and Write Files](https://realpython.com/pandas-read-write-files/)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-12-26T07:35:50.817551Z",
-     "start_time": "2020-12-26T07:35:50.510191Z"
-    },
-    "hidden": true
+     "end_time": "2021-01-25T17:09:48.706118Z",
+     "start_time": "2021-01-25T17:09:48.420303Z"
+    }
    },
    "outputs": [],
    "source": [
@@ -67,8 +62,7 @@
   {
    "cell_type": "markdown",
    "metadata": {
-    "heading_collapsed": true,
-    "hidden": true
+    "heading_collapsed": true
    },
    "source": [
     "## Read Data\n",
@@ -183,8 +177,7 @@
   {
    "cell_type": "markdown",
    "metadata": {
-    "heading_collapsed": true,
-    "hidden": true
+    "heading_collapsed": true
    },
    "source": [
     "## Write Data\n",
@@ -227,8 +220,7 @@
   {
    "cell_type": "markdown",
    "metadata": {
-    "heading_collapsed": true,
-    "hidden": true
+    "heading_collapsed": true
    },
    "source": [
     "## Data Size and Shape\n",
@@ -271,8 +263,7 @@
   {
    "cell_type": "markdown",
    "metadata": {
-    "heading_collapsed": true,
-    "hidden": true
+    "heading_collapsed": true
    },
    "source": [
     "## Summary Statistics\n",
@@ -300,8 +291,7 @@
   {
    "cell_type": "markdown",
    "metadata": {
-    "heading_collapsed": true,
-    "hidden": true
+    "heading_collapsed": true
    },
    "source": [
     "## Unique Observations\n",
@@ -344,8 +334,7 @@
   {
    "cell_type": "markdown",
    "metadata": {
-    "heading_collapsed": true,
-    "hidden": true
+    "heading_collapsed": true
    },
    "source": [
     "## Value Counts\n",
@@ -387,7 +376,9 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "heading_collapsed": true
+   },
    "source": [
     "# Summary\n",
     "\n",
@@ -399,7 +390,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.7.7 64-bit ('learning': conda)",
+   "display_name": "('learning': conda)",
    "language": "python",
    "name": "python37764bitlearningcondadead39b8b5cb441aa05edba06d4d913f"
   },
