--- a/Lecture 6/Data Visualization_Interactive.ipynb
+++ b/Lecture 6/Data Visualization_Interactive.ipynb
@@ -2,9 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "metadata": {
-    "heading_collapsed": true
-   },
+   "metadata": {},
    "source": [
     "# Interactive Data Visualization\n",
     "\n",
@@ -19,10 +17,9 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2021-01-05T14:29:11.859079Z",
-     "start_time": "2021-01-05T14:29:11.856450Z"
-    },
-    "hidden": true
+     "end_time": "2021-02-11T15:14:07.755975Z",
+     "start_time": "2021-02-11T15:14:07.201295Z"
+    }
    },
    "outputs": [],
    "source": [
@@ -34,9 +31,7 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "source": [
     "Like `Seaborn`, `Plotly-Express` have builtin datasets. Let use `tips` dataset in order to replicate all static charts we made in previous notebook. After that we can extend Plotly-Express functionality to produce higher quality plots."
    ]
@@ -46,10 +41,9 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2021-01-05T15:08:29.538887Z",
-     "start_time": "2021-01-05T15:08:29.515420Z"
-    },
-    "hidden": true
+     "end_time": "2021-02-11T15:14:17.442977Z",
+     "start_time": "2021-02-11T15:14:17.398878Z"
+    }
    },
    "outputs": [],
    "source": [
@@ -60,10 +54,7 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "heading_collapsed": true,
-    "hidden": true
-   },
+   "metadata": {},
    "source": [
     "## Line Plots"
    ]
@@ -73,10 +64,9 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2021-01-05T14:29:32.469099Z",
-     "start_time": "2021-01-05T14:29:32.466775Z"
-    },
-    "hidden": true
+     "end_time": "2021-02-11T15:15:26.454126Z",
+     "start_time": "2021-02-11T15:15:26.450356Z"
+    }
    },
    "outputs": [],
    "source": [
@@ -90,10 +80,9 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2021-01-05T14:31:44.574997Z",
-     "start_time": "2021-01-05T14:31:44.504933Z"
-    },
-    "hidden": true
+     "end_time": "2021-02-11T15:15:32.115920Z",
+     "start_time": "2021-02-11T15:15:31.611205Z"
+    }
    },
    "outputs": [],
    "source": [
@@ -104,10 +93,7 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "heading_collapsed": true,
-    "hidden": true
-   },
+   "metadata": {},
    "source": [
     "## Bar Charts"
    ]
@@ -117,10 +103,9 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2021-01-05T14:21:57.646254Z",
-     "start_time": "2021-01-05T14:21:57.548086Z"
-    },
-    "hidden": true
+     "end_time": "2021-02-11T15:16:38.786307Z",
+     "start_time": "2021-02-11T15:16:38.684598Z"
+    }
    },
    "outputs": [],
    "source": [
@@ -134,10 +119,9 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2021-01-05T14:22:00.524971Z",
-     "start_time": "2021-01-05T14:22:00.452897Z"
-    },
-    "hidden": true
+     "end_time": "2021-02-11T15:17:12.888888Z",
+     "start_time": "2021-02-11T15:17:12.801616Z"
+    }
    },
    "outputs": [],
    "source": [
@@ -148,10 +132,7 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "heading_collapsed": true,
-    "hidden": true
-   },
+   "metadata": {},
    "source": [
     "## Scatter Plots"
    ]
@@ -161,10 +142,9 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2021-01-05T14:23:28.782739Z",
-     "start_time": "2021-01-05T14:23:28.698131Z"
-    },
-    "hidden": true
+     "end_time": "2021-02-11T15:19:31.204061Z",
+     "start_time": "2021-02-11T15:19:31.126628Z"
+    }
    },
    "outputs": [],
    "source": [
@@ -178,10 +158,9 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2021-01-05T14:25:54.318489Z",
-     "start_time": "2021-01-05T14:25:54.243802Z"
-    },
-    "hidden": true
+     "end_time": "2021-02-11T15:20:52.482255Z",
+     "start_time": "2021-02-11T15:20:52.367247Z"
+    }
    },
    "outputs": [],
    "source": [
@@ -201,10 +180,9 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2021-01-05T15:08:36.298831Z",
-     "start_time": "2021-01-05T15:08:36.172236Z"
-    },
-    "hidden": true
+     "end_time": "2021-02-11T15:22:12.334623Z",
+     "start_time": "2021-02-11T15:22:12.171326Z"
+    }
    },
    "outputs": [],
    "source": [
@@ -223,10 +201,7 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "heading_collapsed": true,
-    "hidden": true
-   },
+   "metadata": {},
    "source": [
     "## Histogram"
    ]
@@ -236,10 +211,9 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2021-01-05T15:09:32.484084Z",
-     "start_time": "2021-01-05T15:09:32.411497Z"
-    },
-    "hidden": true
+     "end_time": "2021-02-11T15:24:07.630068Z",
+     "start_time": "2021-02-11T15:24:07.539185Z"
+    }
    },
    "outputs": [],
    "source": [
@@ -256,10 +230,9 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2021-01-05T15:10:45.024534Z",
-     "start_time": "2021-01-05T15:10:44.934661Z"
-    },
-    "hidden": true
+     "end_time": "2021-02-11T15:24:14.102704Z",
+     "start_time": "2021-02-11T15:24:13.971694Z"
+    }
    },
    "outputs": [],
    "source": [
@@ -273,10 +246,7 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "heading_collapsed": true,
-    "hidden": true
-   },
+   "metadata": {},
    "source": [
     "## Pie Chart"
    ]
@@ -286,10 +256,9 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2021-01-05T15:12:49.244570Z",
-     "start_time": "2021-01-05T15:12:49.160317Z"
-    },
-    "hidden": true
+     "end_time": "2021-02-11T15:24:43.426776Z",
+     "start_time": "2021-02-11T15:24:43.339311Z"
+    }
    },
    "outputs": [],
    "source": [
@@ -306,10 +275,9 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2021-01-05T15:15:15.363843Z",
-     "start_time": "2021-01-05T15:15:15.287056Z"
-    },
-    "hidden": true
+     "end_time": "2021-02-11T15:25:18.990799Z",
+     "start_time": "2021-02-11T15:25:18.911008Z"
+    }
    },
    "outputs": [],
    "source": [
@@ -324,10 +292,7 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "heading_collapsed": true,
-    "hidden": true
-   },
+   "metadata": {},
    "source": [
     "## Box Plot"
    ]
@@ -337,10 +302,9 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2021-01-05T15:24:00.694652Z",
-     "start_time": "2021-01-05T15:24:00.620005Z"
-    },
-    "hidden": true
+     "end_time": "2021-02-11T15:26:11.516645Z",
+     "start_time": "2021-02-11T15:26:11.423027Z"
+    }
    },
    "outputs": [],
    "source": [
@@ -354,10 +318,9 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2021-01-05T15:24:41.810236Z",
-     "start_time": "2021-01-05T15:24:41.741459Z"
-    },
-    "hidden": true
+     "end_time": "2021-02-11T15:26:50.303432Z",
+     "start_time": "2021-02-11T15:26:50.225105Z"
+    }
    },
    "outputs": [],
    "source": [
@@ -371,10 +334,9 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2021-01-05T15:25:33.922683Z",
-     "start_time": "2021-01-05T15:25:33.835598Z"
-    },
-    "hidden": true
+     "end_time": "2021-02-11T15:27:01.935785Z",
+     "start_time": "2021-02-11T15:27:01.850842Z"
+    }
    },
    "outputs": [],
    "source": [
@@ -385,10 +347,7 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "heading_collapsed": true,
-    "hidden": true
-   },
+   "metadata": {},
    "source": [
     "## Violin Plot"
    ]
@@ -398,10 +357,9 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2021-01-05T15:27:11.064354Z",
-     "start_time": "2021-01-05T15:27:10.989097Z"
-    },
-    "hidden": true
+     "end_time": "2021-02-11T15:27:26.973656Z",
+     "start_time": "2021-02-11T15:27:26.875848Z"
+    }
    },
    "outputs": [],
    "source": [
@@ -415,10 +373,9 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2021-01-05T15:29:21.822486Z",
-     "start_time": "2021-01-05T15:29:21.735324Z"
-    },
-    "hidden": true
+     "end_time": "2021-02-11T15:27:48.017475Z",
+     "start_time": "2021-02-11T15:27:47.930147Z"
+    }
    },
    "outputs": [],
    "source": [
@@ -436,10 +393,7 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "heading_collapsed": true,
-    "hidden": true
-   },
+   "metadata": {},
    "source": [
     "## Parallel Category Diagram"
    ]
@@ -449,10 +403,9 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2021-01-05T14:41:25.608286Z",
-     "start_time": "2021-01-05T14:41:25.538288Z"
-    },
-    "hidden": true
+     "end_time": "2021-02-11T15:44:10.034212Z",
+     "start_time": "2021-02-11T15:44:10.011180Z"
+    }
    },
    "outputs": [],
    "source": [
@@ -463,19 +416,14 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "source": [
     " "
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "heading_collapsed": true,
-    "hidden": true
-   },
+   "metadata": {},
    "source": [
     "## TreeMap"
    ]
@@ -485,10 +433,9 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2021-01-05T14:46:48.390533Z",
-     "start_time": "2021-01-05T14:46:48.356093Z"
-    },
-    "hidden": true
+     "end_time": "2021-02-11T15:34:18.999501Z",
+     "start_time": "2021-02-11T15:34:18.965924Z"
+    }
    },
    "outputs": [],
    "source": [
@@ -502,10 +449,9 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2021-01-05T14:48:22.279643Z",
-     "start_time": "2021-01-05T14:48:22.117825Z"
-    },
-    "hidden": true
+     "end_time": "2021-02-11T15:34:50.965727Z",
+     "start_time": "2021-02-11T15:34:50.769307Z"
+    }
    },
    "outputs": [],
    "source": [
@@ -521,10 +467,7 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "heading_collapsed": true,
-    "hidden": true
-   },
+   "metadata": {},
    "source": [
     "## Map"
    ]
@@ -534,10 +477,9 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2021-01-05T14:53:54.199552Z",
-     "start_time": "2021-01-05T14:53:54.179603Z"
-    },
-    "hidden": true
+     "end_time": "2021-02-11T15:36:06.194633Z",
+     "start_time": "2021-02-11T15:36:06.182876Z"
+    }
    },
    "outputs": [],
    "source": [
@@ -552,10 +494,9 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2021-01-05T14:54:40.134026Z",
-     "start_time": "2021-01-05T14:54:40.030344Z"
-    },
-    "hidden": true
+     "end_time": "2021-02-11T15:36:18.576460Z",
+     "start_time": "2021-02-11T15:36:18.493388Z"
+    }
    },
    "outputs": [],
    "source": [
@@ -577,10 +518,7 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "heading_collapsed": true,
-    "hidden": true
-   },
+   "metadata": {},
    "source": [
     "## Animations"
    ]
@@ -590,10 +528,9 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2021-01-05T14:56:42.367415Z",
-     "start_time": "2021-01-05T14:56:42.329793Z"
-    },
-    "hidden": true
+     "end_time": "2021-02-11T15:41:37.121137Z",
+     "start_time": "2021-02-11T15:41:37.096864Z"
+    }
    },
    "outputs": [],
    "source": [
@@ -607,10 +544,9 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2021-01-05T14:59:05.685593Z",
-     "start_time": "2021-01-05T14:59:05.310896Z"
-    },
-    "hidden": true
+     "end_time": "2021-02-11T15:41:41.882571Z",
+     "start_time": "2021-02-11T15:41:41.582730Z"
+    }
    },
    "outputs": [],
    "source": [
@@ -637,10 +573,9 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2021-01-05T15:01:25.218676Z",
-     "start_time": "2021-01-05T15:01:25.100151Z"
-    },
-    "hidden": true
+     "end_time": "2021-02-11T15:43:20.960803Z",
+     "start_time": "2021-02-11T15:43:20.857616Z"
+    }
    },
    "outputs": [],
    "source": [
@@ -649,7 +584,7 @@
     "                    color=\"lifeExp\",\n",
     "                    hover_name=\"country\",\n",
     "                    animation_frame=\"year\",\n",
-    "                    color_continuous_scale = px.colors.sequential.Plasma,\n",
+    "                    color_continuous_scale = px.colors.sequential.Viridis,\n",
     "                    projection=\"natural earth\",\n",
     "                    labels={\"lifeExp\": \"Life Expectancy\"})\n",
     "\n",
@@ -680,7 +615,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.7.7 64-bit ('learning': conda)",
+   "display_name": "('learning': conda)",
    "language": "python",
    "name": "python37764bitlearningcondadead39b8b5cb441aa05edba06d4d913f"
   },
